# VTF-Viewer

./: .clion-config  .gitignore  CMakeLists.txt  LICENSE  README.md  build-release-linux.sh  build-release-macos.sh  build-release-windows.bat  build.sh
lib/VTFLib/: VMTFile.cpp  VMTFile.h  VTFFile.cpp  VTFFile.h  VTFFormat.h  VTFLib.cpp  VTFLib.h
resources/: resources.qrc  style.qss
src/: ExportDialog.cpp  ExportDialog.h  GalleryView.cpp  GalleryView.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  VMTParser.cpp  VMTParser.h  VTFReader.cpp  VTFReader.h  main.cpp
